docs/7.52/md/abenrfc_destination.md
---
title: "RFC Destination"
description: |
  The information about the target system of an RFC call is stored in the RFC destination. -   Static Destinations(#abenrfc-destination-1--------dynamic-destinations---@ITOC@@ABENRFC_DESTINATION_2) -   Predefined Destinations(#abenrfc-destination-3--------application-servers-as-destinations---@ITO
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_destination.htm"
abapFile: "abenrfc_destination.htm"
keywords: ["do", "if", "case", "try", "method", "class", "data", "types", "abenrfc", "destination"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_communication.htm) →  [RFC - Remote Function Call](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc.htm) →  [RFC Overview](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_intro_oview.htm) → 

RFC Destination

The information about the target system of an RFC call is stored in the RFC destination.

-   [Static Destinations](#abenrfc-destination-1--------dynamic-destinations---@ITOC@@ABENRFC_DESTINATION_2)

-   [Predefined Destinations](#abenrfc-destination-3--------application-servers-as-destinations---@ITOC@@ABENRFC_DESTINATION_4)

-   [More Information](#@@ITOC@@ABENRFC_DESTINATION_5)

Static Destinations

The attributes of destinations are defined statically and managed in AS ABAP using the transaction SM59. Every destination managed in transaction SM59 has a unique name that can be specified after the addition [DESTINATION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_function_destination.htm) in RFC. For every destination, a connection type, the partner program, and the target system are defined in transaction SM59. Logon data and further connection options can also be defined in the destination.

Note

The documented function module RFC\_MODIFY\_R3\_DESTINATION edits static destinations managed in transaction SM59.

Dynamic Destinations

In cases whether it is not enough to use the static destinations managed using transaction SM59, the associated attributes can be grouped as a dynamic destination. This is done using the class CL\_DYNAMIC\_DESTINATION. Its method CREATE\_RFC\_DESTINATION creates a text field that can be specified in the current [internal session](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninternal_session_glosry.htm "Glossary Entry") in RFC after the addition [DESTINATION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_function_destination.htm) and interpreted as a destination by the runtime environment. A destination from transaction SM59 can also be used as a template and modified accordingly. The validity of the new destination is not checked until it is used for an RFC.

A dynamic destination has the characters %% as a prefix. These dynamic destinations must only be created using the class CL\_DYNAMIC\_DESTINATION and must never be added to programs from external sources. Further methods in the class make it possible to

-   invalidate a dynamic destination created the current session,

-   check whether a destination added from an external source is a dynamic destination,

-   invalidate any dynamic destinations added from external sources.

Executable Example

[Dynamic RFC Destination](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_dynamic_dest_abexa.htm)

Predefined Destinations

There are two predefined destinations that do not have to be entered using transaction SM59:

-   The destination "NONE"" dictates that the function module starts on the same [application server](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenapplication_server_glosry.htm "Glossary Entry") as the calling program, but using the RFC interface and in a separate [RFC context](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_session_glosry.htm "Glossary Entry") for the current user. This destination is possible for all execution modes.

-   Destination "BACK" can be used in a function module that is called remotely, and links back to the caller. This can only be specified in function modules that have been called synchronously. Destination "BACK" can be used to call each remote-capable function module of the calling system in all three execution types. In synchronous callbacks, the associated relevant function group is loaded into the [internal session](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninternal_session_glosry.htm "Glossary Entry") of the calling program, if it does not yet exist there. The existent RFC connection is used for this callback.

Notes

-   If the predefined destination "NONE" is used, no logon data or password must be specified when the user session is opened. If an RFC is performed for the current application server using a destination defined in the transaction SM59, the settings on the application server dictate whether logon data needs to be specified or not.

-   The logon data (user name, client, and logon language) for an RFC session with the destination "NONE" is taken implicitly from the calling session. The [text environment language](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentext_env_langu_glosry.htm "Glossary Entry") of the calling session must be used for the [logon language](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlogon_language_glosry.htm "Glossary Entry") (and not the logon language of the session). The text environment language can be set using the statement [SET LOCALE LANGUAGE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_locale.htm).

Application Servers as Destinations

As well as the destinations created in transaction SM59, dynamic destinations, and the two predefined destinations, destinations can also be specified directly, in the form hostname\_sysid\_sysnr. hostname is the host name of the application server, sysid is the name of an AS ABAP, and sysnr is the system number as it is displayed using the transaction SM51.

The only systems that an be reached like this are the current systems or systems connected using a [trust relationship](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensmt1_2.htm). For the current system, the logon data of the current user is used. For other systems, a logon is necessary.

Note

This data can be specified dynamically without presenting a security risk.

More Information

For a detailed description of the RFC destination, see the RFC documentation on [SAP Help Portal](http://help.sap.com).